--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -169,7 +169,7 @@
 
       <!-- Footer -->
       <footer class="footer">
-        <p><a href="/api/friends">API Buddy List</a> | <a href="https://github.com/tomtom28/friendfinder" target="_blank">GitHub Repo</a> | <a href="/">Home</a></p>
+        <p><a href="/api/friends">API Buddy List</a></p>
       </footer> 
 
 
